--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -21,3 +21,15 @@ ul {
         }
     }
 }
+agm-map {
+    height: 300px;
+  }
+  
+  
+  * {
+    font-family: Lato;
+  }
+  
+  a {
+    color: darkblue;
+  }
