--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -6,7 +6,7 @@ header {
     }
 
     nav {
-        justify-self: right;
+        justify-self: left;
     
         ul {
             list-style-type: none;
@@ -16,7 +16,7 @@ header {
                 float: left;
 
                 a {
-                    padding: 1.5em;
+                    padding: .7em;
                     text-transform: uppercase;
                     font-size: .8em;
 
