--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,41 +1,46 @@
- 
- <h1 >Vehicle Location</h1>
+<h1>Vehicle Location</h1>
 
- <!-- <ul *ngIf="users">
+<!-- <ul *ngIf="users">
    <li *ngFor="let user of users.data">
      <img [src] ="user.avatar">
      <p>{{ user.first_name }}  {{ user.last_name}}</p>
    </li>
  </ul> -->
-
- <agm-map 
-  [latitude]="lat"
-  [longitude]="lng"
-  [zoom]="zoom"
-  [disableDefaultUI]="false"
-  [zoomControl]="false"
-  (mapClick)="mapClicked($event)">
-
-  <agm-marker 
+<div id="chartdiv" style="float:left;">
+  Test
+</div>
+<div id="map">
+  <agm-map
+    [latitude]="lat"
+    [longitude]="lng"
+    [zoom]="zoom"
+    [disableDefaultUI]="false"
+    [zoomControl]="false"
+    (mapClick)="mapClicked($event)"
+  >
+    <agm-marker
       *ngFor="let m of markers; let i = index"
-      (markerClick)="clickedMarker(m.label, i)"
-      [latitude]="m.lat"
-      [longitude]="m.lng"
-      [label]="m.label"
+      (markerClick)="clickedMarker(m.vehicleId, i)"
+      [latitude]="m.latitude"
+      [longitude]="m.longitude"
+      [label]="m.vehicleId"
       [markerDraggable]="m.draggable"
-      (dragEnd)="markerDragEnd(m, $event)">
+      (dragEnd)="markerDragEnd(m, $event)"
       
-    <agm-info-window>
-      <strong>InfoWindow content</strong>
-    </agm-info-window>
-    
-  </agm-marker>
-  
-  <agm-circle [latitude]="lat + 0.3" [longitude]="lng" 
+    >
+      <agm-info-window>
+        <strong>Vehcle ID :- {{m.vehicleId}} <br/> Serial Number :- {{m.serialNumber}}</strong>
+      </agm-info-window>
+    </agm-marker>
+
+    <agm-circle
+      [latitude]="lat + 0.3"
+      [longitude]="lng"
       [radius]="5000"
       [fillColor]="'red'"
       [circleDraggable]="true"
-      [editable]="true">
-  </agm-circle>
-
-</agm-map>
+      [editable]="true"
+    >
+    </agm-circle>
+  </agm-map>
+</div>
