--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,7 +22,7 @@ ul {
     }
 }
 agm-map {
-    height: 300px;
+    height: 400px;
   }
   
   
@@ -32,4 +32,32 @@ agm-map {
   
   a {
     color: darkblue;
+  }
+  #chartdiv {
+    min-width: 300px;
+    min-height: 400px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    border-radius: 3px;
+    margin: 5px;
+    padding: 10px;
+    overflow: hidden;
+    box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
+    padding-bottom:250px;
+  }
+
+  #map {
+    flex: 1;
+    height: 100%;
+    min-height: 200px;
+    padding: 0px 10px;
+    background-color: #fff;
+    border-radius: 3px;
+    margin: 5px;
+    padding: 10px;
+    overflow: hidden;
+    box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.2);
   }
